@@ -1,3 +1,7 @@
+Thu Mar  4 18:04:04 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
+
+	* test/openssl: backport cosmetic changes from 1.9.
+
 Sun Feb 28 11:49:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* openssl/ossl.c (OSSL_IMPL_SK2ARY): for OpenSSL 1.0.
